RESOLVED FIXED236765
Crash while destroying RemoteVideoFrameObjectHeap
https://bugs.webkit.org/show_bug.cgi?id=236765
Summary Crash while destroying RemoteVideoFrameObjectHeap
Kimmo Kinnunen
Reported 2022-02-17 02:39:33 PST
Crash while destroying RemoteVideoFrameObjectHeap
Attachments
Patch (1.70 KB, patch)
2022-02-17 02:43 PST, Kimmo Kinnunen
ews-feeder: commit-queue-
Kimmo Kinnunen
Comment 1 2022-02-17 02:42:47 PST
Kimmo Kinnunen
Comment 2 2022-02-17 02:43:50 PST
EWS
Comment 3 2022-02-17 05:34:05 PST
Committed r290012 (247398@main): <https://commits.webkit.org/247398@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 452340 [details].
Note You need to log in before you can comment on or make changes to this bug.