Crash while destroying RemoteVideoFrameObjectHeap https://bugs.webkit.org/show_bug.cgi?id=236765 <rdar://89003650>

Patch by Kimmo Kinnunen <kkinnunen@apple.com> on 2022-02-17
Reviewed by Antti Koivisto.

Add virtual destructor to ThreadSafeObjectHeap. (ThreadSafe)RefCounted<T> deletes
the object through the T pointer. In this case, T is ThreadSafeObjectHeap, but
the underlying type is RemoteVideoFrameObjectHeap. This causes delete through non-virtual
pointer and skips ~ThreadSafeObjectHeap().

No new tests, tested by existing tests under ASAN.

* Shared/ThreadSafeObjectHeap.h:


Canonical link: https://commits.webkit.org/247398@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290012 268f45cc-cd09-0410-ab3c-d52691b4dbfc